--- a/website/index.html
+++ b/website/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Slate • HyperScript Converter</title>
     <link rel="stylesheet" href="main.css" />
+    <link href="https://fonts.googleapis.com/css?family=Fira+Mono|Fira+Sans" rel="stylesheet">
   </head>
   <body>
     <div id="example"></div>
